# BUAA_Compiler

./: .gitignore  BUAA_Compiler.7z  CMakeLists.txt  InstructionStatistics.txt  README.md  compress.bat  log.txt  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  runMips.bat  test.c  testAll.bat  testfile1.txt  testfile2.txt  testfile3.txt  testfile4.txt  testfile5.txt
.VSCodeCounter/2023-12-14_15-39-45/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Test/: InstructionStatistics.txt  error.txt  log.txt  middleCode.txt  mips.txt  output.txt  test.c  tester.py  testfile.txt  testfile3.txt  testfile4.txt  testfile5.txt  testfile6.txt
Test/2023/: testfile7.txt
Test/LexicalAnalysis/: output.txt  output_r.txt  testfile.txt
Test/prj/: output1.txt  output2.txt  output3.txt  output4.txt  testfile1.txt  testfile2.txt  testfile3.txt  testfile4.txt
Test/public/: input20.txt  input23.txt  input28.txt  input40.txt  input50.txt  input57.txt  input58.txt  input6.txt  input69.txt  input82.txt  output5.txt  output58.txt  output93.txt  testfile1.txt  testfile11.txt  testfile12.txt  testfile13.txt  testfile14.txt  testfile15.txt  testfile16.txt  testfile17.txt  testfile18.txt  testfile19.txt  testfile2.txt  testfile20.txt  testfile21.txt  testfile22.txt  testfile23.txt  testfile24.txt  testfile25.txt  testfile26.txt  testfile27.txt  testfile28.txt  testfile29.txt  testfile3.txt  testfile30.txt  testfile31.txt  testfile33.txt  (+65 more)
docs/: LLVM学习.md  优化文档.md  总结感想.md  编译中的C++.md  编译优化学习.md  设计文档.md
src/: main.cpp
(+389 files in other folders)
